--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -1,11 +1,11 @@
-<section class="vite-promo">
-  <div class="container">
+<section class="vite-promo1">
+  <div class="container1">
     <div class="wrapper">
-      <h2 class="title">
+      <h2 class="title" data-aos="fade-up">
         <span class="gradient">Vite</span>
       </h2>
       <p class="text">Next Generation Frontend Tooling</p>
-      <p class="tagline">
+      <p class="tagline" data-aos="fade-right">
         Get ready for a development environment that can finally catch up with
         you.
       </p>
