--- a/src/css/sections/section-hero.css
+++ b/src/css/sections/section-hero.css
@@ -1,3 +1,12 @@
-.hero{
-    background: red;
+.hero {
+  background: red;
+}
+
+@media screen and (min-width: 1100px) {
+  /*  true */
+  .hero {
+    background: blue;
+  }
+  /*  < 1100 */
+  /* false */
 }
