--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,10 +4,14 @@
   | default @import url()
   |============================
 */
+@import url('../../node_modules/modern-normalize/modern-normalize.css');
 @import url('./reset.css');
+@import url('../../node_modules/swiper/swiper-bundle.min.css');
+@import url('../../node_modules/aos/dist/aos.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
 @import url('./sections/section-hero.css');
+@import url('./sections/section-slider.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -23,4 +27,25 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body{
+  overflow-x: hidden;
+}
+
+.test-imgs {
+  padding: 120px 0;
+}
+
+.html-img {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+}
+
+.css-img {
+  width: 200px;
+  height: 200px;
+  background: url(../img/mark.jpg);
+  background-color: red;
 }
